# render-prompt

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md
src/: cli.rs  error.rs  main.rs
src/data/: loader.rs  merger.rs  mod.rs
src/template/: engine.rs  include.rs  mod.rs  variable.rs
test_data/: data.yaml  header.txt  output.txt  template.txt  undefined_test.txt
tests/: data_merge_test.rs  edge_cases_test.rs  integration_test.rs  security_test.rs
